; ModuleID = '/home/carl/AnghaBench/qmk_firmware/users/narze/extr_superduper.c_toggle_superduper_mode.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/users/narze/extr_superduper.c_toggle_superduper_mode.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@superduper_enabled = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @toggle_superduper_mode() #0 {
  %1 = load i32, i32* @superduper_enabled, align 4
  %2 = icmp ne i32 %1, 0
  %3 = xor i1 %2, true
  %4 = zext i1 %3 to i32
  store i32 %4, i32* @superduper_enabled, align 4
  %5 = load i32, i32* @superduper_enabled, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %9

7:                                                ; preds = %0
  %8 = call i32 (...) @set_superduper_key_combos()
  br label %11

9:                                                ; preds = %0
  %10 = call i32 (...) @clear_superduper_key_combos()
  br label %11

11:                                               ; preds = %9, %7
  %12 = load i32, i32* @superduper_enabled, align 4
  ret i32 %12
}

declare dso_local i32 @set_superduper_key_combos(...) #1

declare dso_local i32 @clear_superduper_key_combos(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
